added docker-compose file